[package]
name = "blyat"
version = "0.1.0"
authors = ["Kenan Sulayman <kenan@sly.mn>"]
edition = "2018"

[dependencies]

[profile]

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
debug = true
debug-assertions = true
#lto = true
opt-level = 3
panic = "abort"
#panic = "unwind"
rpath = false
